[gd_scene load_steps=3 format=3 uid="uid://cudk5len203pr"]

[ext_resource type="Script" uid="uid://br7avgcumowyr" path="res://scenes/ui/user_interface.gd" id="1_d7vd3"]
[ext_resource type="FontFile" uid="uid://dwiv1pnrb2mxa" path="res://assets/visual/fonts/Kbluckyclover-djAR.ttf" id="2_hj6hg"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_d7vd3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 1260.0
offset_bottom = 710.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Humans:"

[node name="humans_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Pets:"

[node name="pets_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="level_label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hj6hg")
theme_override_font_sizes/font_size = 30
text = "Level 0"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer3/HBoxContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Timer"
horizontal_alignment = 2

[node name="timer_label" type="Label" parent="MarginContainer/VBoxContainer3/HBoxContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "##:##"
horizontal_alignment = 2
